--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,7 +1,7 @@
 /* Forest green background */
 body {
   background-color: #0b3d26; /* deep forest green */
-  color: #f5f5f5;
+  color: #333;
 }
 
 /* Content area */
